# rust-easybit.io

./: .gitignore  Cargo.toml  README.md
src/: account.rs  client.rs  csurrency.rs  currency.rs  lib.rs
src/currency/: exchange_rate.rs  info.rs  mod.rs  pair_info.rs  pair_list.rs  validate_address.rs
src/kyc/: mod.rs  refund.rs  update.rs
src/orders/: all.rs  create.rs  create_old.rs  mod.rs  status.rs
