[package]
name = "easybit"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.4"
log = "0.4.22"
reqwest = {version="0.12.5",features=["json"]}
serde = {version="1.0.204",features=["derive"]}
serde_json = "1.0.120"
thiserror = "1.0.63"
tokio = { version = "1.37.0", features = ["full"] }
zeroize = {version="1.8.1", features=["zeroize_derive"]}
